# grant-monitor

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
references/: database-schema.md  keywords.txt
scripts/: check_all.py  check_deadlines.py  grant_database.py  list_grants.py
scripts/scrapers/: __init__.py  base.py  brazil.py  china.py  international.py
