[project]
name = "grant-monitor"
version = "0.1.0"
description = "Automated monitoring system for research grant opportunities in epidemiology, global health, and AI for science"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Flávio Codeço Coelho", email = "fccoelho@example.com"}
]
keywords = ["grants", "funding", "research", "epidemiology", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
grant-check = "scripts.check_all:main"

[project.urls]
Homepage = "https://github.com/fccoelho/grant-monitor"
Repository = "https://github.com/fccoelho/grant-monitor"
Documentation = "https://github.com/fccoelho/grant-monitor#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
